fix icon alignment

--- a/packages/assets/scss/03-organisms/_page-banner.scss
+++ b/packages/assets/scss/03-organisms/_page-banner.scss
@@ -47,6 +47,11 @@ $text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
   }
 
+  &__title-wrapper {
+    display: flex;
+    align-items: center;
+  }
+
 
   .ma__decorative-link a,
   &__unlinked-title {
